--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,9 +12,26 @@
     <p-button class="pl-5" label="Sing Up" severity="secondary"/>
   </div>
   <div class="py-3">
-    <p-button label="Forgot Password" [link]="true"/>
+    <p-button label="Forgot Password" [link]="true" (onClick)="showDialog()"/>
   </div>
 </p-card>
+<div class="card flex justify-content-center">
+  <p-dialog header="Edit Profile" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+      <span class="p-text-secondary block mb-5">Cambio de Password</span>
+      <div class="flex align-items-center gap-3 mb-3">
+          <label for="username" class="font-semibold w-6rem">Email</label>
+          <input pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="email" />
+      </div>
+      <div class="flex align-items-center gap-3 mb-5">
+          <label for="email" class="font-semibold w-6rem">Nuevo Password</label>
+          <input pInputText id="email" class="flex-auto" autocomplete="off" type="password" [(ngModel)]="pass"/>
+      </div>
+      <div class="flex justify-content-end gap-2">
+          <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+          <p-button label="Cambiar Password" (onClick)="changePass(email,pass)" />
+      </div>
+  </p-dialog>
+</div>
 
 
 
