--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,15 +20,15 @@
       <span class="p-text-secondary block mb-5">Cambio de Password</span>
       <div class="flex align-items-center gap-3 mb-3">
           <label for="username" class="font-semibold w-6rem">Email</label>
-          <input pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="email" />
+          <input pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="entity.email" />
       </div>
       <div class="flex align-items-center gap-3 mb-5">
           <label for="email" class="font-semibold w-6rem">Nuevo Password</label>
-          <input pInputText id="email" class="flex-auto" autocomplete="off" type="password" [(ngModel)]="pass"/>
+          <input pInputText id="email" class="flex-auto" autocomplete="off" type="password" [(ngModel)]="entity.password"/>
       </div>
       <div class="flex justify-content-end gap-2">
           <p-button label="Cancel" severity="secondary" (click)="visible = false" />
-          <p-button label="Cambiar Password" (onClick)="changePass(email,pass)" />
+          <p-button label="Cambiar Password" (onClick)="changePass(entity)" />
       </div>
   </p-dialog>
 </div>
