Se hacen modificaciones en los servicios de perfil y en el componente padre de perfil e hijo de listpefil

--- a/src/app/Domains/Perfil/Component/perfil/perfil.component.html
+++ b/src/app/Domains/Perfil/Component/perfil/perfil.component.html
@@ -2,4 +2,6 @@
   [perfilU]="perfil"
   [usuarioGYM]="usuario"
   [cambioBoton]="cBoton"
+  (buscarPerfil)="obtenerPerfilO($event)"
+  [perfilEntity]="perfilO"
 />
