--- a/src/app/Domains/Perfil/Pages/listperfil/listperfil.component.html
+++ b/src/app/Domains/Perfil/Pages/listperfil/listperfil.component.html
@@ -122,51 +122,82 @@
       <p-button label="Modificar Perfil" (onClick)="handleDialog(perfilU.id)"></p-button>
     </div>
     <p-dialog header="Modificar Perfil" [modal]="true" [(visible)]="showDialog" [style]="{width: '35rem'}">
-      <span class="p-text-secondary block mb-5">Actualiza tu Información de Perfil.</span>
-    <div class="flex align-items-center gap-3 mb-3">
+      <span class="p-text-secondary block mb-2">Actualiza tu Información de Perfil.</span>
+      <div class="flex align-items-center gap-3 mb-2">
         <label for="idPerfil" class="font-semibold w-6rem">Id. Perfil</label>
         <input pInputText id="idPerfil" type="text" class="flex-auto" autocomplete="off" [(ngModel)]="perfilEntity.id" [disabled]="true"/>
-    </div>
-    <div class="flex align-items-center gap-3 mb-5">
+      </div>
+      <div class="flex align-items-center gap-3 mb-2">
         <label for="idUsuario" class="font-semibold w-6rem">Id. Usuario</label>
         <input pInputText id="email" type="text" class="flex-auto" autocomplete="off" [(ngModel)]="perfilEntity.idUsuario" [disabled]="true"/>
-    </div>
-    <div *ngIf="perfilEntity.edad !== 0; else elseBlockEdadM">
-      <div class="flex align-items-center gap-3 mb-5">
-        <label for="edad" class="font-semibold w-6rem">Edad</label>
-        <p-inputNumber inputId="minmax" mode="decimal" [(ngModel)]="perfilEntity.edad" id="edad" [min]="0" [max]="100"/>
       </div>
-      <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="showDialog = false" />
-        <p-button label="Save" (click)="showDialog = false" />
-    </div>
-    </div>
-    <ng-template #elseBlockEdadM>
-      <div class="flex align-items-center gap-3 mb-5">
-        <label for="edad" class="font-semibold w-6rem">Edad</label>
-        <p-inputNumber
-          inputId="minmax"
-          mode="decimal"
-          type="number"
-          [(ngModel)]="perfilEntity.edad"
-          id="edad"
-          [min]="0" [max]="100"
-          class="ng-invalid ng-dirty"
-          aria-describedby="EdadM-help"
-        />
-        <div>
-          <small id="EdadM-help">
-            {{usuarioGYM.nombre}} debes actualizar tu perfil con la inofrmacion de este campo.
-          </small>
+      <div *ngIf="perfilEntity.edad !== null; else elseBlockEdadM">
+        <div class="flex align-items-center gap-3 mb-2">
+          <label for="edad" class="font-semibold w-6rem">Edad</label>
+          <p-inputNumber #edadInput inputId="minmax" mode="decimal" [(ngModel)]="perfilEntity.edad" id="edad"/>
         </div>
       </div>
-      <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="showDialog = false"/>
-        <p-button label="Save" (click)="showDialog = false" [disabled]="true"/>
-    </div>
-    </ng-template>
-
-
+      <ng-template #elseBlockEdadM>
+        <div class="flex align-items-center gap-3 mb-2">
+          <label for="edad" class="font-semibold w-6rem">Edad</label>
+          <p-inputNumber #edadInput
+            inputId="minmax"
+            mode="decimal"
+            [(ngModel)]="perfilEntity.edad"
+            id="edad"
+            [min]="1"
+            [max]="100"
+            class="ng-invalid ng-dirty"
+            aria-describedby="EdadM-help"
+          />
+          <div>
+            <small id="EdadM-help">
+              {{usuarioGYM.nombre}} debes actualizar tu perfil con la inofrmacion de este campo.
+            </small>
+          </div>
+        </div>
+      </ng-template>
+      <div *ngIf="perfilEntity.peso !== null; else elseBlockPesoM">
+        <div class="flex align-items-center gap-3 mb-2">
+          <label for="peso" class="font-semibold w-6rem">Peso</label>
+          <p-inputNumber inputId="minmaxfraction" mode="decimal" [(ngModel)]="perfilEntity.peso" id="peso" [minFractionDigits]="2" [maxFractionDigits]="3"/>
+        </div>
+      </div>
+      <ng-template #elseBlockPesoM>
+        <div class="flex align-items-center gap-3 mb-2">
+          <label for="peso" class="font-semibold w-6rem">Peso</label>
+          <p-inputNumber
+            inputId="minmaxfraction"
+            mode="decimal"
+            [(ngModel)]="perfilEntity.peso"
+            id="peso"
+            min="0"
+            max="100"
+            [minFractionDigits]="2"
+            [maxFractionDigits]="3"
+            class="ng-invalid ng-dirty"
+            aria-describedby="PesoM-help"
+          />
+          <div>
+            <small id="PesoM-help">
+              {{usuarioGYM.nombre}} debes actualizar tu perfil con la inofrmacion de este campo.
+            </small>
+          </div>
+        </div>
+      </ng-template>
+        <div class="flex align-items-center gap-3 mb-2">
+          <label for="sexo" class="font-semibold w-6rem">Tipo Sexo</label>
+          <p-listbox
+              [options]="kSex"
+              [(ngModel)]="selectedSex"
+              optionLabel="tipo"
+              [style]="{'width':'15rem'}"
+              [listStyle]="{'max-height': '220px'}" />
+        </div>
+        <div class="flex justify-content-end gap-3 mt-5">
+          <p-button label="Cancel" severity="secondary" (click)="showDialog = false"/>
+          <p-button label="Save" (click)="handleBotonGuardar()" [disabled]="false"/>
+        </div>
     </p-dialog>
   </div>
   <!--modal para crear perfil-->
