--- a/src/app/Domains/Shared/Auth/pages/inicio-form/inicio-form.component.html
+++ b/src/app/Domains/Shared/Auth/pages/inicio-form/inicio-form.component.html
@@ -1,116 +1,132 @@
 <!--Formulario principal de login-->
-<div>
-  <form [formGroup]="formLogin" (ngSubmit)="onSubmit($event)">
-    <div>
-      <label for="email">email</label>
-      <input type="text" id="email" formControlName="email">
-      @if (formLogin.get('email')?.errors && formLogin.get('email')?.touched) {
-        @if (formLogin.get('email')?.hasError('required')) {
+<div class="mt-8 lg:mx-8 mx-4 border-solid border-200 border-round-2xl">
+  <div class="ml-4 -mt-3 bg-white border-solid border-transparent lg:w-2 w-4 flex justify-content-center flex-wrap">
+    <p class="p-0 m-0">App myGYM</p>
+  </div>
+  <form class="lg:m-8 m-3 lg:px-8" [formGroup]="formLogin" (ngSubmit)="onSubmit($event)">
+    <p-inputGroup>
+        <!--<label for="email">email</label>-->
+        <p-inputGroupAddon>
+          <i class="pi pi-envelope"></i>
+        </p-inputGroupAddon>
+          <input pInputText type="text" id="email" formControlName="email"/>
+    </p-inputGroup>
+        @if (formLogin.get('email')?.errors && formLogin.get('email')?.touched) {
+          @if (formLogin.get('email')?.hasError('required')) {
           <div>
-            <p>es un campo requerido</p>
+            <p class="mt-2 ml-6 text-sm text-red-200">es un campo requerido</p>
           </div>
         }
         @if (formLogin.get('email')?.hasError('email')) {
           <div>
-            <p>debe ser una cuenta de email valida</p>
+            <p class="mt-2 ml-6 text-sm text-red-200">debe ser una cuenta de email valida</p>
           </div>
         }
       }
-    </div>
-    <div>
-      <label for="password">Password</label>
-      <input type="password" name="pass" id="password" formControlName="password">
-      @if (formLogin.get('password')?.errors && formLogin.get('password')?.touched) {
-        @if (formLogin.get('password')?.hasError('required')) {
-          <div>
-            <p>es un campo requerido</p>
-          </div>
-        }
-        @if (formLogin.get('password')?.hasError('minlength')) {
-          <div>
-            <p>El password debe tener minimo 8 caracteres</p>
-          </div>
-        }
+    <p-inputGroup class="mt-3">
+      <!--<label for="password">Password</label>-->
+      <p-inputGroupAddon>
+        <i class="pi pi-key"></i>
+      </p-inputGroupAddon>
+      <input pInputText  type="password" name="pass" id="password" formControlName="password">
+    </p-inputGroup>
+    @if (formLogin.get('password')?.errors && formLogin.get('password')?.touched) {
+      @if (formLogin.get('password')?.hasError('required')) {
+        <div>
+          <p class="mt-2 ml-6 text-sm text-red-200">es un campo requerido</p>
+        </div>
       }
-    </div>
-    <div>
-      <button type="submit" [disabled]="formLogin.invalid">LogIn</button>
+      @if (formLogin.get('password')?.hasError('minlength')) {
+        <div>
+          <p class="mt-2 ml-6 text-sm text-red-200">El password debe tener minimo 8 caracteres</p>
+        </div>
+      }
+    }
+
+    <div class="mt-5">
+      <p-button type="submit" [raised]="true" [disabled]="formLogin.invalid">LogIn</p-button>
     </div>
   </form>
+</div>
+
+<div class="lg:flex lg:flex-row lg:flex-wrap flex-none mt-3 lg:ml-8 ml-4">
   <!---Boton para disparar el formulario Modal de crear usuario-->
   <div>
-    <button (click)="onHandleModalCU()">Crear Usuario GYM</button>
+    <p-button severity="secondary" (click)="onHandleModalCU()">Crear Usuario GYM</p-button>
   </div>
-  <!--Formulario Modal crear usuario-->
-  <p-dialog header="Crear nuevo Usuario" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem'}">
-    <div>
-      <form [formGroup]="formNuevoUsuario" (submit)="onSave($event)">
-        <div>
-          <label for="nombre">Nombre</label>
-          <input type="text" name="nombre" id="nombre" formControlName="nombre">
-          @if (formNuevoUsuario.get('nombre')?.hasError && formNuevoUsuario.get('nombre')?.touched) {
-            @if (formNuevoUsuario.get('nombre')?.hasError('required')) {
-              <div>
-                <p>el campo es requerido</p>
-              </div>
-            }
-          }
-        </div>
-        <div>
-          <label for="apellidos">Apellidos</label>
-          <input type="text" name="apellidos" id="apellidos" formControlName="apellidos">
-          @if (formNuevoUsuario.get('apellidos')?.hasError && formNuevoUsuario.get('apellidos')?.touched) {
-            @if (formNuevoUsuario.get('apellidos')?.hasError('required')) {
-              <div>
-                <p>el campo es requerido</p>
-              </div>
-            }
-          }
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input type="text" name="email" id="email" formControlName="email">
-          @if (formNuevoUsuario.get('email')?.hasError && formNuevoUsuario.get('email')?.touched) {
-            @if (formNuevoUsuario.get('email')?.hasError('required')) {
-              <div>
-                <p>el campo es requerido</p>
-              </div>
-            }
-            @if (formNuevoUsuario.get('email')?.hasError('email')) {
-              <div>
-                <p>debe ser una cuenta de email valida</p>
-              </div>
-            }
-          }
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" formControlName="password">
-          @if (formNuevoUsuario.get('password')?.errors && formNuevoUsuario.get('password')?.touched) {
-            @if (formNuevoUsuario.get('password')?.hasError('required')) {
-              <div>
-                <p>el campo password es requerido</p>
-              </div>
-            }
-            @if (formNuevoUsuario.get('password')?.hasError('minlength')) {
-              <div>
-                <p>el campo debe tener almenos 8 caracteres</p>
-              </div>
-            }
-          }
-        </div>
-        <div>
-          <button (click)="onHandleModalCU()">cancel</button>
-          <button type="submit" [disabled]="formNuevoUsuario.invalid">Guardar</button>
-        </div>
-      </form>
-    </div>
-  </p-dialog>
+  <!---Boton para disparar el formulario Modal para cambio de password-->
+  <div class="lg:ml-2 lg:mt-0 mt-3">
+    <p-button  severity="warning" (click)="onHandleModalMP()">Cambiar Password</p-button>
+  </div>
 </div>
-<!---Boton para disparar el formulario Modal para cambio de password-->
-<div>
-  <button (click)="onHandleModalMP()">Cambiar Password</button>
-</div>
+
+<!--Formulario Modal crear usuario-->
+<p-dialog header="Crear nuevo Usuario" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem'}">
+  <div>
+    <form [formGroup]="formNuevoUsuario" (submit)="onSave($event)">
+      <div>
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" id="nombre" formControlName="nombre">
+        @if (formNuevoUsuario.get('nombre')?.hasError && formNuevoUsuario.get('nombre')?.touched) {
+          @if (formNuevoUsuario.get('nombre')?.hasError('required')) {
+            <div>
+              <p>el campo es requerido</p>
+            </div>
+          }
+        }
+      </div>
+      <div>
+        <label for="apellidos">Apellidos</label>
+        <input type="text" name="apellidos" id="apellidos" formControlName="apellidos">
+        @if (formNuevoUsuario.get('apellidos')?.hasError && formNuevoUsuario.get('apellidos')?.touched) {
+          @if (formNuevoUsuario.get('apellidos')?.hasError('required')) {
+            <div>
+              <p>el campo es requerido</p>
+            </div>
+          }
+        }
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" formControlName="email">
+        @if (formNuevoUsuario.get('email')?.hasError && formNuevoUsuario.get('email')?.touched) {
+          @if (formNuevoUsuario.get('email')?.hasError('required')) {
+            <div>
+              <p>el campo es requerido</p>
+            </div>
+          }
+          @if (formNuevoUsuario.get('email')?.hasError('email')) {
+            <div>
+              <p>debe ser una cuenta de email valida</p>
+            </div>
+          }
+        }
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" formControlName="password">
+        @if (formNuevoUsuario.get('password')?.errors && formNuevoUsuario.get('password')?.touched) {
+          @if (formNuevoUsuario.get('password')?.hasError('required')) {
+            <div>
+              <p>el campo password es requerido</p>
+            </div>
+          }
+          @if (formNuevoUsuario.get('password')?.hasError('minlength')) {
+            <div>
+              <p>el campo debe tener almenos 8 caracteres</p>
+            </div>
+          }
+        }
+      </div>
+      <div>
+        <button (click)="onHandleModalCU()">cancel</button>
+        <button type="submit" [disabled]="formNuevoUsuario.invalid">Guardar</button>
+      </div>
+    </form>
+  </div>
+</p-dialog>
+
+<!--Modal para el cambio de password-->
 <p-dialog header="cambio de Password" [modal]="true" [(visible)]="visibleMP" [style]="{ width: '25rem'}">
   <div>
     <form [formGroup]="formCambiosPass" (submit)="onChangePass($event)">
